--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,167 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --para: 15px
 }
+
+/* header styling  */
+.headerIcons {
+  margin-top: 0;
+  padding-top: 0;
+  width: 100%;
+  height: auto;
+  margin: 0;
+  background-color: rgb(43, 41, 41);
+}
+
+.socialIcons {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  flex-wrap: wrap;
+  list-style-type: none;
+  margin-top: 0;
+}
+
+.socialIcons li {
+  margin: 0rem 0.2rem;
+  padding: 0.5rem;
+}
+
+.socialIcons li .icons {
+  text-decoration: none;
+  color: #fff;
+}
+
+.singup {
+  margin: 0;
+  padding: 0;
+}
+
+.register {
+  background: #8b8484;
+  padding: 0.6rem 1rem;
+  margin: 0;
+}
+
+.socialIcons li .login {
+  background: #ffffff;
+  color: #000;
+  margin: 0;
+  padding: 0.6rem 1rem;
+}
+
+@media screen and (max-width: 480px) {
+  .headerIcons {
+    width: 100%;
+  }
+
+  .socialIcons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .socialIcons li {
+    margin: 0px 5px;
+    padding: 0;
+  }
+
+  .socialIcons li .register {
+    margin: 0;
+    padding: 0.1rem 0.5rem;
+  }
+
+  .socialIcons li .login {
+    margin: 0;
+    padding: 0.1rem 0.5rem;
+  }
+}
+
+/* header styling  */
+
+
+/* Navbar styling */
+nav {
+  height: auto;
+  background: #9c9999;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0rem 4rem;
+}
+
+nav .logo {
+  font-size: 30px;
+  font-weight: 600;
+}
+
+nav .menu {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  list-style-type: none;
+}
+
+nav .menu li {
+  margin: 0rem 2rem;
+}
+
+nav .menu .menulist {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #000;
+}
+
+nav .menuIcons {}
+
+nav .menuIcons ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  list-style-type: none;
+}
+
+nav .menuIcons ul li {
+  margin: 0rem 0.5rem;
+}
+
+
+
+@media screen and (max-width:1020px) {
+  nav .menu li {
+    margin: 0rem 1rem;
+  }
+}
+
+@media screen and (max-width:920px) {
+  nav .logo {
+    font-size: 20px;
+    font-weight: 600;
+  }
+
+  nav .menu li {
+    margin: 0rem 0.5rem;
+  }
+}
+
+@media screen and (max-width:720px) {
+  nav{
+    padding: 0rem 1rem;
+  }
+  nav .logo{
+    display: none;
+  }
+  nav .menu li{
+    margin:0rem 0.3rem;
+  }
+  
+}
+
