--- a/src/index.css
+++ b/src/index.css
@@ -25,8 +25,9 @@ body {
   flex-wrap: wrap;
   list-style-type: none;
   margin-top: 0;
+  margin-bottom: 0;
 }
-
+/* hello this mis  */
 .socialIcons li {
   margin: 0rem 0.2rem;
   padding: 0.5rem;
@@ -88,12 +89,14 @@ body {
 /* Navbar styling */
 nav {
   height: auto;
-  background: #9c9999;
+  background: transparent;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   padding: 0rem 4rem;
+  margin: 0%;
+  box-shadow: 10px 7px 10px #9c9999;
 }
 
 nav .logo {
@@ -132,8 +135,12 @@ nav .menuIcons ul {
 nav .menuIcons ul li {
   margin: 0rem 0.5rem;
 }
-
-
+.hamburger-menu {
+  display: none;
+}
+.hamburger-menu a{
+  color: #000;
+}
 
 @media screen and (max-width:1020px) {
   nav .menu li {
@@ -152,16 +159,34 @@ nav .menuIcons ul li {
   }
 }
 
-@media screen and (max-width:720px) {
+@media screen and (max-width:760px) {
   nav{
     padding: 0rem 1rem;
   }
   nav .logo{
-    display: none;
+    display: block;
   }
   nav .menu li{
-    margin:0rem 0.3rem;
+    margin:0rem 0.5rem;
+  }
+  .menuIcons{
+    display: none;
   }
   
-}
+} 
+
+@media screen and (max-width:540px) {
+  nav{
+    padding: 0rem 4rem;
+  }
+  nav .logo{
+    display: block;
+  }
+  .hamburger-menu{
+    display: block;
+  }
+  nav .menu{
+    display: none;
+  }
+} 
 
