--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,17 @@
+@import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100&display=swap");
+
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family:"Jost", sans-serif;
 }
 
 :root {
-  --para: 15px
+  --para: 1.1rem;
+  --font: 'Jost', sans-serif;
+  --heading: 3rem;
+  --subheading:1.8rem;
 }
 
 /* header styling  */
@@ -36,6 +42,7 @@ body {
 .socialIcons li .icons {
   text-decoration: none;
   color: #fff;
+  font-size: var(--para);
 }
 
 .singup {
@@ -45,7 +52,7 @@ body {
 
 .register {
   background: #8b8484;
-  padding: 0.6rem 1rem;
+  padding: 0.5rem 1rem;
   margin: 0;
 }
 
@@ -53,7 +60,7 @@ body {
   background: #ffffff;
   color: #000;
   margin: 0;
-  padding: 0.6rem 1rem;
+  padding: 0.5rem 1rem;
 }
 
 @media screen and (max-width: 480px) {
@@ -190,3 +197,161 @@ nav .menuIcons ul li {
   }
 } 
 
+
+/* Home page styling */
+
+.home-section{
+  margin: 0;
+  background-image: url('../public/images/bg2.jpg');
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 80vh;
+  display: flex;
+  align-items: center;
+}
+.content{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  color: #000;
+  height: 100%;
+  width: 400px;
+  padding: 0rem 4rem 0rem 6rem;
+}
+.heading{
+  margin: 0rem;
+  font-size: 3rem;
+  font-weight: 600;
+  color: #000;
+}
+.subheading{
+  margin-top: 0.5rem;
+  margin-bottom: 0;
+  color: #ad023b;
+  font-size: var(--subheading);
+  font-weight: 400;
+}
+.des{
+  font-size: var(--para);
+  margin-top: 0.5rem;
+}
+.btn{
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  padding: 0.5rem 1rem;
+  border-radius: 2px;
+  border: none;
+  color: #4c4a4a;
+  
+}
+@media screen and(max-width:1020px) {
+  .home-section{
+    background-position: cover;
+    padding: 0;
+    width: 100%;
+  }
+  .content{
+    margin: 0;
+    padding-left: 0.5rem;
+  }
+}
+
+
+@media screen and (max-width:420px) {
+  .home-section{
+    padding: 0;
+    width: 100%;
+    background-position: cover;
+  }
+  .content{
+    width: 100%;
+    padding: 1.5rem;
+    color: #000;
+    font-weight: 500;
+  }
+}
+
+
+.home-card{
+  /* width: 100%; */
+  height: 10rem;
+  background: #c4c2c2d0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0rem 8rem;
+}
+.h-card{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid #fff;
+  padding: 1rem;
+}
+.Truck{
+  font-size: larger;
+}
+.card-des{
+  margin-left: 2rem
+  ;
+}
+.card-title{
+  margin: 0;
+  font-size: var(--subheading);
+}
+.card-para{
+  margin: 0;
+}
+
+
+@media screen and (max-width:1020px) {
+  .home-card{
+    height: auto;
+    padding: 0rem 4rem;
+  }
+  .h-card{
+    display:flex;
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width:720px) {
+  
+  .home-card{
+    display:flex;
+    padding: 0;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  .h-card{
+    margin: 1rem auto;
+    width: 50%;
+    padding: 1rem 4rem;
+    display: flex;
+    flex-direction: row;
+  }
+}
+@media screen and (max-width:500px) {
+  
+  .home-card{
+    display:flex;
+    padding: 0;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  .h-card{
+    margin: 1rem auto;
+    width: 50%;
+    padding: 1rem 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
